--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Compass"
         tools:targetApi="31">
         <activity
+            android:name=".WestActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SouthActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EastActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NorthActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
